# shooter

./: .gitmodules  CMakeLists.txt
libs/SDL2-2.0.3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SDL2-static.vcxproj  SDL2.sln  SDL2.vcxproj  SDL2.vcxproj.filters  SDL2main.vcxproj  SDL2main.vcxproj.filters  cmake_install.cmake
libs/SDL2-2.0.3/Debug/: SDL2.exp  SDL2.lib  SDL2main.lib
libs/SDL2-2.0.3/SDL2-static.dir/Debug/SDL2-static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
libs/SDL2-2.0.3/SDL2.dir/Debug/SDL2.tlog/: CL.command.1.tlog  CL.write.1.tlog  SDL2.lastbuildstate  custombuild.write.1.tlog
libs/SDL2-2.0.3/SDL2main.dir/Debug/SDL2main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
libs/SDL2/.hg/: dirstate
libs/SDL2/.hg/cache/: branch2-served  hgtagsfnodes1  rbc-revs-v1  tags2-visible
libs/SDL2/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  fncache  undo
libs/SDL2/.hg/store/data/: _c_make_lists.txt.i  _whats_new.txt.i  configure.d  configure.i  configure.in.d  configure.in.i
libs/SDL2/.hg/store/data/_visual_c/_s_d_l/: _s_d_l.vcxproj.i
libs/SDL2/.hg/store/data/_visual_c/_s_d_lmain/: _s_d_lmain.vcxproj.i
libs/SDL2/.hg/store/data/_visual_c/_s_d_ltest/: _s_d_ltest.vcxproj.i
libs/SDL2/.hg/store/data/_xcode-i_o_s/_demos/_demos.xcodeproj/: project.pbxproj.i
libs/SDL2/.hg/store/data/_xcode-i_o_s/_s_d_l/_s_d_l.xcodeproj/: project.pbxproj.i
libs/SDL2/.hg/store/data/_xcode-i_o_s/_test/_testi_phone_o_s.xcodeproj/: project.pbxproj.i
libs/SDL2/.hg/store/data/android-project/src/org/libsdl/app/: _s_d_l_activity.java.i
libs/SDL2/.hg/store/data/include/: _s_d_l__config.h.cmake.i  _s_d_l__config__iphoneos.h.i  _s_d_l__egl.h.i  _s_d_l__hints.h.i  _s_d_l__render.h.i  _s_d_l__revision.h.i  _s_d_l__timer.h.i
libs/SDL2/.hg/store/data/premake/projects/: _s_d_l2.lua.i
libs/SDL2/.hg/store/data/src/core/android/: _s_d_l__android.c.i
libs/SDL2/.hg/store/data/src/core/windows/: _s_d_l__xinput.c.i
libs/SDL2/.hg/store/data/src/joystick/: _s_d_l__gamecontrollerdb.h.i  _s_d_l__joystick.c.i
libs/SDL2/.hg/store/data/src/joystick/darwin/: _s_d_l__sysjoystick.c.i  _s_d_l__sysjoystick__c.h.i
libs/SDL2/.hg/store/data/src/joystick/iphoneos/: _s_d_l__sysjoystick.m.i
libs/SDL2/.hg/store/data/src/render/: _s_d_l__render.c.i
libs/SDL2/.hg/store/data/src/thread/pthread/: _s_d_l__systhread.c.i
libs/SDL2/.hg/store/data/src/video/cocoa/: _s_d_l__cocoawindow.m.i
libs/SDL2/.hg/store/data/src/video/psp/: _s_d_l__pspevents.c.i
libs/SDL2/.hg/store/data/src/video/uikit/: _s_d_l__uikitopenglview.m.i  _s_d_l__uikitview.m.i
libs/SDL2/.hg/store/data/src/video/windows/: _s_d_l__windowsmessagebox.c.i
libs/SDL2/.hg/store/data/src/video/x11/: _s_d_l__x11events.c.d  _s_d_l__x11events.c.i  _s_d_l__x11keyboard.c.i  _s_d_l__x11sym.h.i  _s_d_l__x11video.c.d  _s_d_l__x11video.c.i  _s_d_l__x11video.h.i  _s_d_l__x11window.c.i
libs/SDL2/.hg/store/data/test/: testgamecontroller.c.i  testjoystick.c.i
src/: component.h  entity.h  game.cpp  game.h  main.cpp  mesh.h  render.cpp  render.h  resource.cpp  resource.h  shader.cpp  shader.h  sprite.cpp  sprite.h  timer.cpp  timer.h  util.h  vector.h  window.cpp  window.h
src/shaders/: triangle.frag  triangle.vert
